--- a/arabic_products.html
+++ b/arabic_products.html
@@ -1218,7 +1218,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1251,7 +1251,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1283,7 +1283,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1316,7 +1316,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1349,7 +1349,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1382,7 +1382,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1414,7 +1414,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1447,7 +1447,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1479,7 +1479,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1512,7 +1512,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1544,7 +1544,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1577,7 +1577,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1609,7 +1609,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2099,7 +2099,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2132,7 +2132,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2164,7 +2164,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2197,7 +2197,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2230,7 +2230,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2263,7 +2263,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2295,7 +2295,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2328,7 +2328,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2360,7 +2360,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2393,7 +2393,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2425,7 +2425,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2458,7 +2458,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2490,7 +2490,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
