--- a/english_products.html
+++ b/english_products.html
@@ -1219,7 +1219,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1252,7 +1252,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1284,7 +1284,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1317,7 +1317,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1350,7 +1350,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1383,7 +1383,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1415,7 +1415,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1448,7 +1448,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1480,7 +1480,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1513,7 +1513,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1545,7 +1545,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1578,7 +1578,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1610,7 +1610,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2100,7 +2100,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2133,7 +2133,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2165,7 +2165,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2198,7 +2198,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2231,7 +2231,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2264,7 +2264,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2296,7 +2296,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2329,7 +2329,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2361,7 +2361,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2394,7 +2394,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2426,7 +2426,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2459,7 +2459,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2491,7 +2491,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub></sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
