--- a/arabic_products.html
+++ b/arabic_products.html
@@ -338,7 +338,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -370,7 +370,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>PRODUCTS SYSTEMS</p>
+                                    <p>ARABIC PRODUCTS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -403,7 +403,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -439,7 +439,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -471,7 +471,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>PRODUCTS SYSTEMS</p>
+                                    <p>ARABIC PRODUCTS</p>
                                     <h3>KGPRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -504,7 +504,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -540,7 +540,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -572,7 +572,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>PRODUCTS SYSTEMS</p>
+                                    <p>ARABIC PRODUCTS</p>
                                     <h3>KGPRIPRESS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -605,7 +605,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -641,7 +641,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -673,7 +673,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>PRODUCTS SYSTEMS</p>
+                                    <p>ARABIC PRODUCTS</p>
                                     <h3>AIS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -706,7 +706,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>PRODUCTS SYSTEMS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
