--- a/products.html
+++ b/products.html
@@ -356,9 +356,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -388,9 +388,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -421,9 +421,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -457,9 +457,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -489,9 +489,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -522,9 +522,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -558,9 +558,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -590,9 +590,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -623,9 +623,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -659,9 +659,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -691,9 +691,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -724,9 +724,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                       <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>200</sub></h3>
+                                        </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
